add comments sys: giscus

--- a/site/public/css/style.css
+++ b/site/public/css/style.css
@@ -157,7 +157,7 @@ header.gnb .logo .sub-logo {
   font-size: 6em;
 }
 .main-container .page-wrapper .page-title {
-  font-size: 3em;
+  font-size: 2em;
   font-weight: 300;
   margin-bottom: 10px;
 }
@@ -310,12 +310,17 @@ section .section-contents .contents-wrapper .contents-item {
   flex: 0 0 auto;
 }
 
+.comments-wrapper {
+  padding: 30px;
+  margin: 50px 0 20px;
+}
+
 #welcome .container {
   margin-top: 50px;
 }
 #welcome .section-contents {
   width: 80%;
-  line-height: 21px;
+  line-height: 25px;
 }
 
 #custom-theme .user-custom-theme {
@@ -352,11 +357,12 @@ section .section-contents .contents-wrapper .contents-item {
 }
 #typography .color-box {
   display: inline-block;
-  min-width: 120px;
-  height: 120px;
+  min-width: 100px;
+  height: 100px;
   padding: 10px;
   word-break: break-word;
   margin: 5px;
+  border-radius: 8px;
 }
 #typography .color-box.bordered {
   border: 1px solid;
