--- a/site/views/components/badge.pug
+++ b/site/views/components/badge.pug
@@ -12,7 +12,7 @@ block contents
                     p !{cont("ELEMENTS_BADGE_SUB_TITLE")}
             .section-contents
                 h4.contents-title Base
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-button
                             | Badge
@@ -40,7 +40,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title Type
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-button
                             | Float
@@ -59,24 +59,24 @@ block contents
                                     | #{code1}
             .section-contents
                 h4.contents-title Round
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
-                        .ga-button.icon.circle
+                        .ga-button.icon.round
                             i.xi-star
                             span.ga-badge.float.secondary 7
-                        .ga-button.circle
+                        .ga-button.round
                             | Counting Star
                             span.ga-badge.mark.green
                     .footer
-                        - var code = '<div class="ga-button icon circle">\n    <i class="some icon" />\n    <span class="ga-badge float">{ Badge Contents }</span>\n</div>'
-                        - var code1 = '<div class="ga-button icon circle">\n    Button Text\n    <span class="ga-badge mark" />\n</div>'
+                        - var code = '<div class="ga-button icon round">\n    <i class="some icon" />\n    <span class="ga-badge float">{ Badge Contents }</span>\n</div>'
+                        - var code1 = '<div class="ga-button icon round">\n    Button Text\n    <span class="ga-badge mark" />\n</div>'
                             pre
                                 code.language-markup
                                     | #{code}
                                     | #{code1}
             .section-contents
                 h4.contents-title Text
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-button
                             | First
@@ -94,7 +94,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title Shadow
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-button
                             | Shadow
@@ -111,7 +111,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title Align
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-button
                             | Left
@@ -129,7 +129,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title Colors
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-button
                             | Red
