--- a/site/views/components/base.pug
+++ b/site/views/components/base.pug
@@ -12,7 +12,7 @@ block contents
                     p !{cont("BASE_TYPOGRAPHY_SUB_TITLE")}
             .section-contents
                 h4.header Typography
-                .ga-segment.float.round-xl
+                .ga-segment.float.round-m
                     .contents
                         .ga-tag.label.primary
                             i.icon.left.xi-at
@@ -29,7 +29,7 @@ block contents
                                     p 가나다라마바사
             .section-contents
                 h4.header Weight
-                .ga-segment.float.round-xl
+                .ga-segment.float.round-m
                     .contents
                         .contents-wrapper
                             table.ga-table
@@ -58,7 +58,7 @@ block contents
 
             .section-contents
                 h4.header Letter Spacing
-                .ga-segment.float.round-xl
+                .ga-segment.float.round-m
                     .contetns
                         .contents-wrapper
                             table.ga-table
@@ -96,7 +96,7 @@ block contents
                                         td.spacing-narrower Frontend Renders On Grid. 
             .section-contents
                 h4.header Heading
-                .ga-segment.float.round-xl
+                .ga-segment.float.round-m
                     .contents
                         .contents-wrapper
                             h1.header [H1] Frontend Renders On Grid.
@@ -106,7 +106,7 @@ block contents
                             h5.header [H5] Frontend Renders On Grid.
             .section-contents
                 h4.header Hero
-                .ga-segment.float.round-xl
+                .ga-segment.float.round-m
                     .contents
                         .contents-wrapper
                             .contents-item.hero.large FROG
@@ -115,7 +115,7 @@ block contents
 
             .section-contents
                 h4.header Size
-                .ga-segment.float.round-xl
+                .ga-segment.float.round-m
                     .contents
                         .contents-wrapper
                             .contents-item.tiny [Tiny] Frontend Renders On Grid.
