--- a/site/views/components/calendar.pug
+++ b/site/views/components/calendar.pug
@@ -12,7 +12,7 @@ block contents
           p !{cont("ELEMENTS_CALENDAR_SUB_TITLE")}
       .section-contents
         h4 Base
-        .ga-segment.float.round-xl.attached
+        .ga-segment.float.round-m.attached
           .contents-wrapper.flex-wrap
             .ga-calendar
               .calendar-header 
