--- a/site/views/components/cards.pug
+++ b/site/views/components/cards.pug
@@ -13,7 +13,7 @@ block contents
                     p !{cont("ELEMENTS_CARDS_SUB_TITLE")}
             .section-contents
                 h4.contents-title 기본
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper.contents
                         .ga-card.border
                             .contents= content         
@@ -24,7 +24,7 @@ block contents
                                 code.language-markup= code
             .section-contents
                 h4.contents-title Title
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper.contents
                         .ga-card.border
                             .contents 
@@ -37,11 +37,11 @@ block contents
                                 code.language-markup= code
             .section-contents
                 h4.contents-title Image
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper.contents
                         .ga-card.border.media
-                            .image
-                                img(src="/img/profile_img.png", alt="profile")
+                            .image.gray-bg-50
+                                img(src="/img/tommy_profile.svg", alt="profile")
                             .contents 
                                 .title.huge Title
                                 = content
@@ -52,7 +52,7 @@ block contents
                                 code.language-markup= code
             .section-contents
                 h4.contents-title Extra
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper.contents
                         .ga-card.border.extra
                             .contents
@@ -67,7 +67,7 @@ block contents
                                 code.language-markup= code
             .section-contents
                 h4.contents-title Attached (header, footer)
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper.contents
                         .ga-card.border.attached 
                             .header Header 영역
@@ -82,7 +82,7 @@ block contents
                                 code.language-markup= code
             .section-contents
                 h4.contents-title Border
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper.contents
                         .ga-card.border
                             .contents= content         
@@ -93,7 +93,7 @@ block contents
                                 code.language-markup= code
             .section-contents
                 h4.contents-title Float
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper.contents
                         .ga-card.float
                             .contents= content         
@@ -104,7 +104,7 @@ block contents
                                 code.language-markup= code
             .section-contents
                 h4.contents-title Cards
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper.contents
                         .ga-cards.column-3
                             .ga-card.border
