--- a/site/views/components/faqs.pug
+++ b/site/views/components/faqs.pug
@@ -7,7 +7,7 @@ block contents
   .page-wrapper
     section#welcome
       .section-title
-        h1= title 
+        h1 FAQs 
         .section-desc 
       .container.center
         .ga-tabs.line
@@ -75,6 +75,7 @@ block contents
               .contents
                 .title !{cont("FAQS_PERPORMANCE_2_Q")}
                 p !{cont("FAQS_PERPORMANCE_2_A")}
+  include ../comments
     block module
       script.
         document.addEventListener('DOMContentLoaded', function() {
