--- a/site/views/components/input.pug
+++ b/site/views/components/input.pug
@@ -12,7 +12,7 @@ block contents
                     p !{cont("ELEMENTS_INPUT_SUB_TITLE")}
             .section-contents
                 h4.contents-title 기본
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-input
                             input(type="text", placeholder="Insert text", value="Frog")
@@ -23,7 +23,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title Disabled
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-input.disabled
                             input(type="text", placeholder="Insert text")
@@ -34,7 +34,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title Read only
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-input.readonly
                             input(type="text", placeholder="Insert text")
@@ -45,7 +45,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title Underline
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-input.underline
                             input(type="text", placeholder="Insert text")
@@ -56,7 +56,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title Transparent
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-input.transparent
                             input(type="text", placeholder="Insert text")
@@ -67,7 +67,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title Compact
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-input.compact
                             input(type="text", placeholder="Insert text")
@@ -78,11 +78,11 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title Edit
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-input.edit
                             input(type="text", placeholder="Insert text", value="원래 값")
-                        .ga-button.icon.circle.edit-btn
+                        .ga-button.icon.round.edit-btn
                             i.xi-pen
                     .footer
                         - var code = '<div class="ga-input edit">\n    <input type="text" placeholder="Insert text" />\n    <button class="ga-button icon edit-btn">\n        <i class="fa fa-pen"></i>\n    </button>\n</div>'
@@ -91,7 +91,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title Status
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-grid
                             .column.span-3.span-xs-8
@@ -116,7 +116,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title Fluid
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-input.fluid
                             input(type="text", placeholder="Insert text")
@@ -127,7 +127,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title Unit
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-input.unit(data-unit='대')
                             input.align-right(type="text", placeholder="0")
@@ -138,7 +138,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title Icon
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-grid
                             .column.span-3.span-xs-8
@@ -150,7 +150,7 @@ block contents
                                 | Right
                                 .ga-input.icon.right.link
                                     input(type="text", placeholder="Insert text")
-                                    i.icon.xi-search.circle
+                                    i.icon.xi-search.round
                             .column.span-3.span-xs-8
                                 | Both
                                 .ga-input.icon.both
@@ -171,7 +171,7 @@ block contents
                                     | #{code2}
             .section-contents
                 h4.contents-title Badge
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-input.badge
                             input(type="text", placeholder="Insert text")
@@ -183,7 +183,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title Label
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-input.labeled.right.inline
                             input(type="text", placeholder="Insert text")
@@ -205,7 +205,7 @@ block contents
                                     | #{code1}
             .section-contents
                 h4.contents-title Button
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-input.button.left
                             input(type="text", placeholder="Insert text")
@@ -225,7 +225,7 @@ block contents
                                     | #{code1}
             .section-contents
                 h4.contents-title Textarea
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-input.fluid
                             textarea(placeholder="Insert text")
