--- a/site/views/components/message.pug
+++ b/site/views/components/message.pug
@@ -12,7 +12,7 @@ block contents
                     p !{cont("ELEMENTS_MESSAGE_SUB_TITLE")}
             .section-contents
                 h4.contents-title Base
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-message contents
                         .ga-message 
@@ -25,7 +25,7 @@ block contents
                                 | #{code}
             .section-contents
                 h4.contents-title State
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-message.success Success
                         .ga-message.danger Danger
