--- a/site/views/components/modal.pug
+++ b/site/views/components/modal.pug
@@ -12,7 +12,7 @@ block contents
                     p !{cont("MODULES_MODAL_SUB_TITLE")}
             .section-contents
                 h4.contents-title Base
-                .ga-segment.float.round-xl
+                .ga-segment.float.round-m
                     .contents-wrapper
                         .ga-modal
                             .modal
@@ -27,7 +27,7 @@ block contents
                                     button.ga-button.text Cancel
             .section-contents
                 h4.contents-title Run
-                .ga-segment.float.round-xl
+                .ga-segment.float.round-m
                     .contents-wrapper
                         button.ga-button.green.show-btn SHOW MODAL
                         .ga-modal-container.ga-modal-background
