--- a/site/views/components/pagination.pug
+++ b/site/views/components/pagination.pug
@@ -12,7 +12,7 @@ block contents
                     p !{cont("ELEMENTS_PAGINATION_SUB_TITLE")} 
             .section-contents
                 h4.contents-title Base
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-pagination
                             - var items = [2, 3, 4, 5, 6, 7, 8, 9, 10]
@@ -45,7 +45,7 @@ block contents
                                 | #{code_f}
             .section-contents
                 h4.contents-title  Limit displayed Number
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-pagination
                             - var items = [2, 3, 4]
@@ -91,9 +91,9 @@ block contents
                                 | #{code_f}
             .section-contents
                 h4.contents-title Button
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
-                        .ga-pagination.number.circle
+                        .ga-pagination.number.round
                             - var items = [2, 3, 4, 5, 6, 7, 8, 9, 10]
                             .pagination-nav
                                 i.xi-angle-left
@@ -104,7 +104,7 @@ block contents
                             .pagination-nav
                                 i.xi-angle-right
                     .footer 
-                        - var code_s = `<div class="ga-pagination number circle">`
+                        - var code_s = `<div class="ga-pagination number round">`
                         - var code_c_l = `      <div class="pagination-nav"><i class="fa fa-chevron-left" /></div>`
                         - var code_c_s = `      <div class="pagination-page-wrapper">`
                         - var code_c_e = `          ... ...`
@@ -122,7 +122,7 @@ block contents
                                 | #{code_f}
             .section-contents
                 h4.contents-title User costom Style
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-pagination.number
                             - var items = [2, 3, 4]
@@ -158,7 +158,7 @@ block contents
                                 | #{code_f}
             .section-contents
                 h4.contents-title Page type
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-pagination.page
                             .pagination-nav.pagination-item
@@ -186,7 +186,7 @@ block contents
                                 | #{code_f}
             .section-contents
                 h4.contents-title Compact
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-pagination.compact.number
                             - var items = [2, 3, 4, 5, 6, 7, 8, 9, 10]
@@ -217,7 +217,7 @@ block contents
                                 | #{code_f}
             .section-contents
                 h4.contents-title Align
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     - var items = [2, 3, 4, 5]
                     .contents-wrapper
                         h5 LEFT
