--- a/site/views/components/panel.pug
+++ b/site/views/components/panel.pug
@@ -12,7 +12,7 @@ block contents
                     p !{cont("ELEMENTS_PANEL_SUB_TITLE")}
             .section-contents
                 h4.contents-title Base
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-panel
                             .panel-header
@@ -36,7 +36,7 @@ block contents
                                 code.language-markup= code
             .section-contents
                 h4.contents-title Collapse
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-panel.collapse
                             .panel-header
@@ -62,7 +62,7 @@ block contents
                                 code.language-markup= code
             .section-contents
                 h4.contents-title Example
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-panel.open
                             .panel-header
