--- a/site/views/components/segments.pug
+++ b/site/views/components/segments.pug
@@ -12,7 +12,7 @@ block contents
                     p !{cont("ELEMENTS_SEGMENTS_SUB_TITLE")}
             .section-contents
                 h4.contents-title 기본
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper.contents
                         .ga-segment
                             .contents
@@ -27,7 +27,7 @@ block contents
                                 code.language-markup= code
             .section-contents
                 h4.contents-title Border
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper.contents    
                         .ga-segment.border
                             .contents
@@ -39,7 +39,7 @@ block contents
                                 code.language-markup= code
             .section-contents
                 h4.contents-title Float
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper.contents    
                         .ga-segment.float
                             .contents
@@ -51,7 +51,7 @@ block contents
                                 code.language-markup= code
             .section-contents
                 h4.contents-title Surface
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper.contents    
                         .ga-segment.surface
                             .contents
@@ -63,7 +63,7 @@ block contents
                                 code.language-markup= code
             .section-contents
                 h4.contents-title Align
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper.contents 
                         .ga-segment.border.align-left
                             .contents
@@ -85,7 +85,7 @@ block contents
                                 code.language-markup= code2
             .section-contents
                 h4.contents-title Round
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper.contents 
                         .ga-segment.border.round-s
                             .contents
@@ -106,7 +106,7 @@ block contents
                                 code.language-markup= code
             .section-contents
                 h4.contents-title Title
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper.contents
                         .ga-segment.border
                             .contents
@@ -119,7 +119,7 @@ block contents
                                 code.language-markup= code
             .section-contents
                 h4.contents-title Attached (header, footer)
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper.contents
                         .ga-segment.border.attached 
                             .header 
@@ -133,7 +133,7 @@ block contents
                                 code.language-markup= code
             .section-contents
                 h4.contents-title Segments
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper.contents
                         .ga-segments.border.round-l
                             .ga-segment.border
