--- a/site/views/components/table.pug
+++ b/site/views/components/table.pug
@@ -13,7 +13,7 @@ block contents
             - var rows = [{name: 'John Doe', age: 11, job: 'Student'},{name: 'Jane Roe', age: 17, job: 'College Student'},{name: 'Alex Kim', age: 31, job: 'Graduate Student'},]
             .section-contents
                 h4.contents-title Basic
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         table.ga-table
                             thead
@@ -43,7 +43,7 @@ block contents
                                     | #{code_e}
             .section-contents
                 h4.contents-title Single Rows
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         table.ga-table.single
                             thead
@@ -72,7 +72,7 @@ block contents
                                     | #{code_e}
             .section-contents
                 h4.contents-title Table Label
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .table-title Table Title
                         table.ga-table.labeled
@@ -102,7 +102,7 @@ block contents
                                     | #{code_e}
             .section-contents
                 h4.contents-title Footer + Pagination
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         table.ga-table
                             thead
@@ -146,7 +146,7 @@ block contents
                                     | #{code_e}
             .section-contents
                 h4.contents-title Table with Form Element
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         table.ga-table.structured
                             tbody
@@ -200,7 +200,7 @@ block contents
                                     | #{code_e}
             .section-contents
                 h4.contents-title tables
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         table.ga-table
                             thead
@@ -238,7 +238,7 @@ block contents
             .section-contents
                 h4.contents-title table column count
                 h5.contents-desc Evenly divide columns by the specified count (10-step percentage split)
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         table.ga-table.column.three
                             thead
@@ -279,7 +279,7 @@ block contents
                                     | #{code_4}
             .section-contents
                 h4.contents-title table + grid - column width
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         table.ga-table
                             thead
