--- a/site/views/components/tabs.pug
+++ b/site/views/components/tabs.pug
@@ -12,7 +12,7 @@ block contents
                     p !{cont("ELEMENTS_TABS_SUB_TITLE")}
             .section-contents
                 h4.contents-title Base
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-tabs
                             .tab-menu
@@ -42,7 +42,7 @@ block contents
                                 | #{code_1_f}
             .section-contents
                 h4.contents-title Vertical
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-tabs.vertical
                             .tab-menu
@@ -70,7 +70,7 @@ block contents
                                 | #{code_1_f}
             .section-contents
                 h4.contents-title Active (Line)
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-tabs.line
                             .tab-menu
@@ -106,7 +106,7 @@ block contents
                                 | #{code_1_f}
             .section-contents
                 h4.contents-title Active (Button)
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-tabs.button
                             .tab-menu
@@ -138,7 +138,7 @@ block contents
                                 | #{code_1_f}
             .section-contents
                 h4.contents-title Browser Tab
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-tabs.browser
                             - var tabMenu = [1, 2, 3, 4, 5]
@@ -146,7 +146,7 @@ block contents
                                 each tab in tabMenu
                                     .tab-item.tab
                                         span.tabText.ellipsis=`Item ${tab}`
-                                        .btn-close.ga-button.icon.tiny.circle
+                                        .btn-close.ga-button.icon.tiny.round
                                             i.xi-close
                             .tab-contents
                                 .tab-plus.ga-button.icon.primary ADD
