--- a/site/views/components/toast.pug
+++ b/site/views/components/toast.pug
@@ -12,13 +12,13 @@ block contents
                     p !{cont("MODULES_TOAST_SUB_TITLE")}
             .section-contents
                 h4.contents-title Base
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper.ex_toast_board
                         .toast.ga-success
                             .toast-contents success
             .section-contents
                 h4.contents-title Use close button
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper.ex_toast_board
                         .toast.ga-success
                             .toast-contents success
@@ -26,7 +26,7 @@ block contents
                                 i.xi-close
             .section-contents
                 h4.contents-title Display icon
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper.ex_toast_board
                         .toast.ga-success
                             .toast-icon
@@ -54,7 +54,7 @@ block contents
                             .toast-contents Importance
             .section-contents
                 h4.contents-title Round
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper.ex_toast_board
                         .toast.ga-success.round
                             .toast-icon
@@ -64,7 +64,7 @@ block contents
                                 i.xi-close
             .section-contents
                 h4.contents-title Style
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper.ex_toast_board
                         .toast.ga-success
                             .toast-icon
@@ -97,7 +97,7 @@ block contents
                                 i.xi-close
             .section-contents
                 h4.contents-title Test
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper.open-btn
                         div.ga-tag.label.ga-success success
                         div.ga-tag.label.ga-info info
