--- a/site/views/components/welcome.pug
+++ b/site/views/components/welcome.pug
@@ -7,7 +7,7 @@ block contents
   .page-wrapper
     section#welcome
       .section-title
-        h1= title 
+        h1 #{title} to Frog
         .section-desc 
       .section-contents
         .container
