--- a/site/views/error.pug
+++ b/site/views/error.pug
@@ -6,7 +6,7 @@ block contents
       h1.status= error.status
       h1.message= message
       br
-      .ga-button.circle.yellow.huge
+      .ga-button.round.yellow.huge
         i.icon.left.xi-arrow-left 
         | 홈으로 가기
         a.link(href="/")
