--- a/site/views/layout.pug
+++ b/site/views/layout.pug
@@ -39,7 +39,7 @@ html
                     
                     nav.main-menu
                         .toggle-menu
-                            .ga-button.icon.circle.show-menu
+                            .ga-button.icon.round.show-menu
                                 i.xi-bars
                     .logo 
                         a(href="/")
@@ -49,35 +49,35 @@ html
                         //- div.sub-logo For Real, Only Good!!
                     nav.sub-menu.small
                         .locale
-                            .ga-button.circle
+                            .ga-button.round
                         //- .link-btn
-                            .ga-button.circle.badge.compact
+                            .ga-button.round.badge.compact
                                 | Be-UI 
                                 .in-badge.ga-deepblue React
                                 a.link(href="https://react-be-ui.vercel.app/", target="_blank")
-                            .ga-button.circle.badge.compact
+                            .ga-button.round.badge.compact
                                 | Be-UI 
                                 .in-badge.ga-green vue
                                 a.link(href="https://beui.vercel.app/", target="_blank") 
                         
                         .buttons-part
-                            .ga-button.circle.badge.compact
+                            .ga-button.round.badge.compact
                                 | Be-UI 
                                 .in-badge.ga-deepblue React
                                 a.link(href="https://react-be-ui.vercel.app/", target="_blank")
-                            .ga-button.circle.badge.compact
+                            .ga-button.round.badge.compact
                                 | Be-UI 
                                 .in-badge.ga-green vue
                                 a.link(href="https://beui.vercel.app/", target="_blank") 
                         
                             .mode
-                                .ga-button.icon.circle.toggle-mode
+                                .ga-button.icon.round.toggle-mode
                                     i.xi-sun-o
                             .github
-                                a.ga-button.icon.circle.toggle-mode(href="https://github.com/noistommy/frog-ui-css")
+                                a.ga-button.icon.round.toggle-mode(href="https://github.com/noistommy/frog-ui-css", target="_blank")
                                     i.xi-github
                         .more 
-                            .ga-button.icon.circle.toggle-sub
+                            .ga-button.icon.round.toggle-sub
                                 i.xi-ellipsis-h
                         
 
