--- a/site/public/scss/style.scss
+++ b/site/public/scss/style.scss
@@ -167,7 +167,7 @@ header.gnb .logo {
       
     }
     .page-title {
-      font-size: 3em;
+      font-size: 2em;
       font-weight: 300;
       margin-bottom: 10px;
     }
@@ -321,13 +321,17 @@ section {
     }
   }
 }
+.comments-wrapper {
+  padding: 30px;
+  margin: 50px 0 20px;
+}
 #welcome {
   .container {
     margin-top: 50px;
   }
   .section-contents {
     width: 80%;
-    line-height: 21px;
+    line-height: 25px;
   }
 
 }
@@ -370,11 +374,12 @@ section {
   }
   .color-box {
     display: inline-block;
-    min-width: 120px;
-    height: 120px;
+    min-width: 100px;
+    height: 100px;
     padding: 10px;
     word-break: break-word;
     margin: 5px;
+    border-radius: 8px;
     &.bordered {
       border: 1px solid
     }
