--- a/site/views/components/grid.pug
+++ b/site/views/components/grid.pug
@@ -12,7 +12,7 @@ block contents
                     p !{cont("LAYOUT_GRID_SUB_TITLE")}
             .section-contents
                 h4.contents-title Base
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-grid.divide
                             each col in [1, 2, 3, 4, 5, 6]
@@ -26,7 +26,7 @@ block contents
                                 | #{code}
             .section-contents
                 h4.contents-title Divide (equaly)
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-grid.divide-2
                             .column
@@ -43,7 +43,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title Divide
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-grid.right-side
                             .rows
