--- a/site/views/components/grid2.pug
+++ b/site/views/components/grid2.pug
@@ -12,7 +12,7 @@ block contents
                     p !{cont("LAYOUT_GRID2_SUB_TITLE")}
             .section-contents
                 h4.contents-title Base
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-grid2.divide-column-8.row-2
                             each col in [1, 2, 3, 4, 5, 6]
@@ -26,7 +26,7 @@ block contents
                                 | #{code}
             .section-contents
                 h4.contents-title Dosirak
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-grid2.dosirak.set-rows(style="--grid-col-num: 4; --grid-row-num: 3; --rows-height: 10rem")
                             each col in [[2, 1],[1, 1],[1, 2],[1, 1],[2, 1],]
@@ -38,7 +38,7 @@ block contents
                                 | #{code}
             .section-contents
                 h4.contents-title Divide
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-grid2
                             .column.col-1
@@ -60,7 +60,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title Divide (+ROW)
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-grid2.set-rows(style="--grid-row-num: 9")
                             .column.col-6.row-6
@@ -77,7 +77,7 @@ block contents
                                     | #{code}
             .section-contents
                 h4.contents-title Auto-fit
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-grid2.divide-column-10.auto-fit
                             .column
@@ -91,7 +91,7 @@ block contents
                                     | #{code}
             //- .section-contents
                 h4.contents-title  Grid + Table
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-grid2.tabled.row-2
                             .column.label.col-1 이름
