--- a/site/views/components/list.pug
+++ b/site/views/components/list.pug
@@ -12,7 +12,7 @@ block contents
                     p !{cont("ELEMENTS_LIST_SUB_TITLE")}  
             .section-contents
                 h4.contents-title 기본
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-list
                             .item(draggable="true") Option 1
@@ -39,7 +39,7 @@ block contents
                                 | #{code_f}
             .section-contents
                 h4.contents-title List Style
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-list.ul
                             li.item Option 1
@@ -61,15 +61,15 @@ block contents
                                     | #{code_c_3}
                                     | #{code_f}
             .section-contents
-                h4.contents-title 선택된 아이템
-                .ga-segment.float.round-xl.attached
+                h4.contents-title Selected Items
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
-                        .ga-list.selection
+                        .ga-list.selection.bg.mark.text
                             .item.selected Option 1
                             .item Option 2
                             .item Option 3
                     .footer
-                        - var code_s = `<div class="ga-list selection">`
+                        - var code_s = `<div class="ga-list selection {mark|bg|text}">`
                         - var code_c_1 = `    <div class="item selected"> option1 </div>`
                         - var code_c_2 = `    <div class="item"> option2 </div>`
                         - var code_e = `    ...`
@@ -85,7 +85,7 @@ block contents
                                     | #{code_f}
             .section-contents
                 h4.contents-title Sub Title
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-list
                             .item
@@ -117,7 +117,7 @@ block contents
                                     | #{code_f}
             .section-contents
                 h4.contents-title Icons
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-list.selection
                             .item
@@ -148,15 +148,15 @@ block contents
                                     | #{code_f}
             .section-contents
                 h4.contents-title Icons
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-list
                             .item
                                 .item-title Option 1
                                 .btn-set
-                                    .ga-button.icon.circle.outline.tiny
+                                    .ga-button.icon.round.outline.tiny
                                         i.xi-plus
-                                    .ga-button.icon.circle.outline.tiny
+                                    .ga-button.icon.round.outline.tiny
                                         i.xi-minus
                             .item
                                 .item-title Option 2
@@ -167,7 +167,7 @@ block contents
                                 .item-title Option 3
             .section-contents
                 h4.contents-title Bordered
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-list.bordered
                             .item Option 1
@@ -190,7 +190,7 @@ block contents
                                     | #{code_f}
             .section-contents
                 h4.contents-title Image
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-list
                             .item
