--- a/site/views/components/selectbox.pug
+++ b/site/views/components/selectbox.pug
@@ -12,7 +12,7 @@ block contents
                     p !{cont("ELEMENTS_SELECTBOX_SUB_TITLE")}
             .section-contents
                 h4.contents-title Base - Dropdown
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-select-box.dropdown.open
                             .selected-item.ga-input.icon.right
@@ -52,7 +52,7 @@ block contents
                                 | #{code_f_1}
             .section-contents
                 h4.contents-title 기본 - Float
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-select-box.float
                             .selected-item.ga-input.icon.both
@@ -83,7 +83,7 @@ block contents
                                 | #{code_f_1}
             .section-contents
                 h4.contents-title Compact
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-select-box.dropdown.compact
                             .selected-item.ga-input.icon.both
@@ -114,7 +114,7 @@ block contents
                                 | #{code_f_1}
             .section-contents
                 h4.contents-title use 'Select' tag
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-select-box(style={width: '300px'})
                             select
@@ -146,7 +146,7 @@ block contents
                                 
             .section-contents
                 h4.contents-title Compact
-                .ga-segment.float.round-xl.attached
+                .ga-segment.float.round-m.attached
                     .contents-wrapper
                         .ga-select-box.compact(style={width: '300px'})
                             select
