--- a/site/views/components/semantic.pug
+++ b/site/views/components/semantic.pug
@@ -12,7 +12,7 @@ block contents
                     p 
             .section-contents
                 h4 Brand
-                .ga-segment.float.round-xl
+                .ga-segment.float.round-m
                     .contents
                         .ga-button.primary Primary
                         .ga-tag.label.primary primary
@@ -32,7 +32,7 @@ block contents
                             .ga-badge.secondary s
             .section-contents
                 h4 Status
-                .ga-segment.float.round-xl
+                .ga-segment.float.round-m
                     .contents
                         .ga-button.success Success
                         .ga-input.success 
@@ -89,7 +89,7 @@ block contents
                             .ga-badge.importance I
             .section-contents
                 h4 Disabled
-                .ga-segment.float.round-xl
+                .ga-segment.float.round-m
                     .contents
                         .ga-button.disabled Disabled
                         .ga-input.disabled 
@@ -105,7 +105,7 @@ block contents
                             span.switch
             .section-contents
                 h4 Fluid
-                .ga-segment.float.round-xl
+                .ga-segment.float.round-m
                     .contents
                         .ga-button.fluid Fluid
                         br
@@ -114,7 +114,7 @@ block contents
                             input(placeholder="fluid")
             .section-contents
                 h4 Compact
-                .ga-segment.float.round-xl
+                .ga-segment.float.round-m
                     .contents
                         .ga-button.compact Compact
                         .ga-input.compact 
