--- a/src/definitions/components/list.scss
+++ b/src/definitions/components/list.scss
@@ -46,7 +46,7 @@ $listItemPadding: calc($verticalInputPadding + 2px);
     //  outline: dotted 1px $primary;
     //}
   }
-  &.bordered {
+  &.border {
     > .item {
       border-bottom: 1px solid var(--brd);
       &:last-child {
@@ -60,21 +60,126 @@ $listItemPadding: calc($verticalInputPadding + 2px);
       &:hover {
         background-color: var(--hover-suf);
       }
-      &.selected, &.active {
-        position: relative;
-        background-color: var(--suf);
-        &:after {
-          content: '';
-          position: absolute;
-          top: 50%;
-          right: 10px;
-          width: 10px;
-          height: 10px;
-          border-radius: 50%;
-          background-color: $primary;
-          transform: translate(0, -50%);
+    }
+    &.mark {
+      > .item {
+        &.include,
+        &.selected:not(.include),
+        &.active {
+          position: relative;
+          &:after {
+            content: '';
+            position: absolute;
+            top: 50%;
+            right: 10px;
+            width: 10px;
+            height: 10px;
+            border-radius: 50%;
+            background-color: $primary;
+            transform: translate(0, -50%);
+          }
         }
       }
+    }
+    &.text {
+      > .item,
+      .item a {
+        &.include,
+        &.selected:not(.include),
+        &.active {
+          color: $primary !important;
+          font-weight: bold;
+        }
+      }
+    }
+    &.bg {
+      > .item {
+        &.include,
+        &.selected:not(.include),
+        &.active {
+          background-color: $lightPrimary;
+        }
+      }
+    }
+  }
+  &.extend {
+    > .item {
+      cursor: pointer;
+      padding: 0;
+      margin: 0;
+    }
+  }
+  &.underLine {
+    .item {
+      border-bottom: 1px solid #ebebeb;
+    }
+    &:first-child {
+      border-top: 1px solid #ebebeb;
+    }
+  }
+  &.compact {
+    .item {
+      padding: 4px 10px;
+    }
+  }
+  &.timeline {
+    .item {
+      position: relative;
+      margin-left: 16px;
+      margin-bottom: 0;
+      &:after {
+        content: '';
+        position: absolute;
+        width: 12px;
+        height: 12px;
+        top: 50%;
+        left: -10px;
+        transform: translate(-50%, -50%);
+        border-radius: 50%;
+        background-color: #d4d4d4;
+      }
+      &.selected:after {
+        background-color: #2985db;
+      }
+    }
+    &.connect .item {
+      &:before {
+        content: '';
+        position: absolute;
+        top: 0;
+        left: -10px;
+        border-left: 1px solid #d4d4d4;
+        height: 100%;
+      }
+      &:first-child {
+        &:before {
+          top: 50%;
+        }
+      }
+      &:last-child {
+        &:before {
+          top: auto;
+          bottom: 50%;
+          height: calc(100% - 5px);
+        }
+      }
+    }
+  }
+  &.icon .item {
+    .item-title {
+      /*display: inline;*/
+      position: relative;
+      padding-left: 26px;
+    }
+    .list-icon {
+      position: absolute;
+      top: 0;
+      left: 0;
+      padding: 2px 10px 2px 0;
+      font-size: 16px;
+      display: inline-block;
+      line-height: 1em;
+      color: #909090;
     }
   }
   &.ul {
