--- a/src/definitions/components/pagination.scss
+++ b/src/definitions/components/pagination.scss
@@ -2,11 +2,12 @@
 
 .#{$ns}-pagination {
   display: flex;
+  width: 100%;
   outline: 0;
   &.hide {
     display: none;
   }
-  &.circle {
+  &.round {
     .pagination-nav,
     .pagination-num {
       border-radius: 1em;
@@ -14,6 +15,7 @@
   }
   .pagination {
     &-item {
+      font-size: 1rem;
       border:1px solid;
       background-color: var(--bgc);
       border-color: var(--brd);
@@ -22,6 +24,7 @@
       display: flex;
     }
     &-nav, &-num {
+      cursor: pointer;
       display: inline-block;
       min-width: 2em;
       line-height: 2em;
@@ -33,11 +36,8 @@
       padding:  0 0.5em;
       user-select: none;
       color: var(--txt);
-      transition-duration: .1s;
-      transition: all 250ms ease;
-      i {
-        font-size: 1em;
-      }
+      // transition-duration: .1s;
+      // transition: all 250ms ease;
       &:hover {
         background-color: var(--suf);
         border-color: var(--brd);
@@ -47,7 +47,7 @@
         background-color: $primary;
         border-color: color.adjust($primary, $lightness: 10%);
         color:#fff;
-        pointer-events: none
+        pointer-events: none;
       }
       &.disabled {
         pointer-events: none;
@@ -87,19 +87,6 @@
         }
       }
     }
-    //&.circle {
-    //  .pagination-nav {
-    //    &:first-child {
-    //      border-bottom-left-radius: 17px;
-    //      border-top-left-radius: 17px;
-    //    }
-    //
-    //    &:last-child {
-    //      border-bottom-right-radius: 17px;
-    //      border-top-right-radius: 17px;
-    //    }
-    //  }
-    //}
   }
   &.compact {
     .pagination {
@@ -108,6 +95,45 @@
         line-height: 1.75em;
         padding: 0 0.375em;
         margin: 0 3px;
+      }
+    }
+  }
+  &.text {
+    .pagination {
+      &-num,
+      &-nav {
+        border-color: transparent;
+        background-color: transparent;
+        &:hover {
+          color: #ccc;
+        }
+        &.active {
+          font-weight: 800;
+          color: $primary;
+          pointer-events: none;
+        }
+      }
+    }
+  }
+}
+
+@each $color, $value in $colors {
+  $hoverColor: color.adjust($value, $lightness: -10%);
+  $textColor: $white;
+  @if color-contrast($value, $textColor) < 1.8 {
+    $textColor: $black;
+  }
+  .#{$ns}-pagination {
+    background-color: transparent;
+    &.#{$color} {
+      .pagination-num.active {
+        background-color: $value;
+      }
+    }
+    &.text.#{$color} {
+      .pagination-num.active {
+        background-color: transparent;
+        color: $value;
       }
     }
   }
