--- a/src/themes/beui/components/table.scss
+++ b/src/themes/beui/components/table.scss
@@ -2,14 +2,14 @@ $verticalMargin: 1em;
 $horizontalMargin: 0;
 $margin: $verticalMargin $horizontalMargin;
 $borderWidth: 1px;
-$tableBorderColor: #d7dae2;
+$tableBorderColor: var(--brd);
 $border: $borderWidth solid $tableBorderColor;
 
 $borderCollapse: separate;
 $borderSpacing: 0;
 $textAlign: left;
 
-$tableFontColor: #2c3e50;
+$tableFontColor: var(--txt);
 $tableFontSize: 13px;
 
 // Row
@@ -21,4 +21,4 @@ $cellHorizontalPadding: relativePx(8);
 $cellPadding: $cellVerticalPadding $cellHorizontalPadding;
 $cellTextAlign: inherit;
 
-$headerBackgroundColor: #e5e9f2;
+$headerBackgroundColor: var(--hover-suf);
